--- a/example6/index.html
+++ b/example6/index.html
@@ -44,8 +44,8 @@
                 </div>
 
                 <div>
-                    <input type="range" id="Hight" name="Hight" min="2" max="10" value="10" step="1">
-                    <label for="Hight">Hight</label>
+                    <input type="range" id="Height" name="Height" min="2" max="10" value="10" step="1">
+                    <label for="Height">Height</label>
                 </div>
 
                 <div>
